@@ -24,6 +24,8 @@ export(generateFromFactor)
 export(identifyDates)
 export(one_hot_encoder)
 export(prepareSet)
+export(remove_rare_categorical)
+export(remove_sd_outlier)
 export(sameShape)
 export(setAsNumericMatrix)
 export(setColAsCharacter)
